# models/Vo/UserRegistryVo.go
@@ -9,3 +9,9 @@ type UserRegistryVo struct {
 	Phone      string `json:"phone"`                                          // 手机号码
 	Age        int    `json:"age" binding:"max=120,min=0"`                    // 年龄
 }
+
+type UserLoginVo struct {
+	UserName string `json:"username" binding:"required"` // 名称
+	Password string `json:"password" binding:"required"` // 密码
+	Token    string `json:"token"`                       // token
+}
